debug-git-clone-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: git-clone-debugger-https
spec:
  volumes:
  - name: workspace
    emptyDir: {}

  # This is the initContainer we are testing.
  containers:
  - name: sleeper
    image: alpine:latest
    command: ["sleep", "3600"]
  
  restartPolicy: Never
